--- a/bs/html/home.html
+++ b/bs/html/home.html
@@ -57,7 +57,8 @@
 
           <div class="mastfoot">
             <div class="inner">
-              <p>Cover template for <a href="http://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+              <p>Hello Flowerfat</p>
+              <p>Template is Cover, from <a href="http://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>. Thanks</p>
             </div>
           </div>
 
