--- a/bs/html/detail.html
+++ b/bs/html/detail.html
@@ -38,7 +38,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="../">Hytera API</a>
+          <a class="navbar-brand header_home" href="../">Hytera API</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav masthead-nav navbar-right">
