little changes about style

--- a/bs/html/about.html
+++ b/bs/html/about.html
@@ -15,6 +15,7 @@
     <link href="/libs/css//bootstrap.min.css" rel="stylesheet">
 
     <link href="/css/cover.css" rel="stylesheet">
+    <link href="/css/main_footer.css" rel="stylesheet">
     
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link href="https://v3.bootcss.com/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
@@ -47,15 +48,18 @@
           </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading">This is an open source project</h1>
+            <h1 class="cover-heading">This Is An Open Source Project</h1>
             <h1 class="cover-heading">The Github Repository is</h1>
             <a class="cover-heading" href="https://github.com/mBigFlower/APIDemo.git" target="_blank">https://github.com/mBigFlower/APIDemo.git</a>
           </div>
 
           <div class="mastfoot">
             <div class="inner">
-              <p>Hello Flowerfat</p>
-              <p>Template is Cover, from <a href="http://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>. Thanks</p>
+			  <div class="row">
+                <a class="link" href="http://flowerfat.com" target="_blank">Blog</a>
+                <a class="link" href="https://github.com/mBigFlower" target="_blank">Github</a>
+			  </div>
+              <p>Template is Cover, from <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a>, by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>. Thanks</p>
             </div>
           </div>
 
