--- a/bs/html/help.html
+++ b/bs/html/help.html
@@ -22,7 +22,17 @@
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="https://v3.bootcss.com/assets/js/ie-emulation-modes-warning.js"></script>
+	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 	
+	
+    <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+	<script type="text/javascript">
+		$(document).ready(function(){
+			$("h5").click(function(){
+				swal("Sweet!", "I like customizing!");
+			});
+		});
+	</script>
   </head>
 
   <body >
@@ -47,7 +57,12 @@
           </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading">No Help Now</h1>
+            <h1 class="cover-heading">If You Cannot Search You What</h1>
+			<h5>Please input the cmd_name, and I'll perfect the database twice a week.</h5>
+			<br>
+			<form class="bs-example bs-example-form" role="form" action="/addRequest?" method="get">
+              <input type="text" class="form-control" placeholder="cmd_name ..." name="data">
+            </form>
           </div>
 
           <div class="mastfoot">
@@ -70,7 +85,6 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"><\/script>')</script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
