make the detail editable
make the detail editable

--- a/bs/demo/X-editable/X-editable Demo2.html
+++ b/bs/demo/X-editable/X-editable Demo2.html
@@ -192,32 +192,27 @@
         </div>
       </div>
     </nav>
-    <div class="container-fluid">
+    <div class="container">
       <div class="row">
-        <div class="col-sm-3 col-md-2 sidebar">
-          <ul class="nav nav-sidebar" id="ApiNames">
-            <!-- <li class="active"><a href="#">region_list_request_ack <span class="sr-only">(current)</span></a></li> -->
-          </ul>
-
-        </div>
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-      <div class="page-header">
-            <h1 id="title"><a id="username2" data-type="text" data-pk="1" data-title="Enter username" class="editable editable-click">ApiName</a></h1>
-      <h3 id="description">description</h3>
-    <button id="editButton">Edit</button>
-    <a id="username3" data-type="text" data-title="用户名">用户名</a>
-      </div>
+        <div class="col-md1">
+            <div class="row">
+                <a class="col-md-2">aaa</a>
+                <button class="col-md-1">bbb</button>
+            </div> 
+            <h3 id="description">description</h3>
       
       
           <h2 class="sub-header">Params</h2>
+
+
           <div class="table-responsive">
             <table class="table table-striped">
               <thead>
                 <tr>
-          <th>Key</th>
-          <th>Content</th>
-          <th>IsNecessary</th>
-          <th>Introduce</th>
+                  <th>Key</th>
+                  <th>Content</th>
+                  <th>IsNecessary</th>
+                  <th>Introduce</th>
                 </tr>
               </thead>
               <tbody id="detailTable">
