--- a/bs/html/detail.html
+++ b/bs/html/detail.html
@@ -58,8 +58,8 @@
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <div class="page-header">
                 <div>
-                  <h1 class="hor" id="title">ApiName></h1>
-                  <button id="enableEdit">enable / disable</button>
+                  <h1 class="hor" id="title">ApiName</h1>
+                  <p id="enableEdit" class="hor">enable / disable</p>
                 </div>
                 <h3 id="description">description</h3>
             </div>
