--- a/bs/html/help.html
+++ b/bs/html/help.html
@@ -1,110 +1,96 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
 
-    <title>Hytera API</title>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <link rel="icon" href="../../favicon.ico">
 
-    <!-- Bootstrap core CSS -->
-    <link href="/libs/css//bootstrap.min.css" rel="stylesheet">
+  <title>Hytera API</title>
 
-    <link href="/css/cover.css" rel="stylesheet">
-    <link href="/libs/css/sweetalert2.css" rel="stylesheet">
-    
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="https://v3.bootcss.com/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+  <!-- Bootstrap core CSS -->
+  <link href="/libs/css//bootstrap.min.css" rel="stylesheet">
 
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="https://v3.bootcss.com/assets/js/ie-emulation-modes-warning.js"></script>
-    <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
-    <script src="/libs/js/sweetalert2.js"></script>
-	
-	<script type="text/javascript">
-		$(document).ready(function(){
-			$("button").click(function(){
-				ShowDialog();
-			});
-		});
-		
-		async function ShowDialog(){
-			const {value: text} = await swal({
-			  input: 'textarea',
-			  inputPlaceholder: 'Input cmd_name here...',
-			  showCancelButton: true
-			})
+  <link href="/css/cover.css" rel="stylesheet">
+  <link href="/libs/css/sweetalert2.css" rel="stylesheet">
 
-			if (text) {
-			  swal(text)
-			}
-		}
+  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+  <link href="https://v3.bootcss.com/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
-    function Xml2Json(){
-      var x2js = new X2JS();
-      var xmlText = "<MyRoot><test>Success</test><test2><item>val1</item><item>val2</item></test2></MyRoot>";
-      var jsonObj = x2js.xml_str2json( xmlText );
-    }
-    Xml2Json();
-	</script>
-  </head>
+  <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+  <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+  <script src="https://v3.bootcss.com/assets/js/ie-emulation-modes-warning.js"></script>
+  <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+  <script src="/libs/js/sweetalert2.js"></script>
+  <script type="text/javascript" src="/js/help.js"></script>
 
-  <body >
-  
-	<div class="site-wrapper">
+  <script type="text/javascript">
+    // function Xml2Json() {
+    //   var x2js = new X2JS();
+    //   var xmlText = "<MyRoot><test>Success</test><test2><item>val1</item><item>val2</item></test2></MyRoot>";
+    //   var jsonObj = x2js.xml_str2json(xmlText);
+    // }
+    // Xml2Json();
+  </script>
+</head>
 
-      <div class="site-wrapper-inner">
+<body>
 
-        <div class="cover-container">
+  <div class="site-wrapper">
 
-          <div class="masthead clearfix">
-            <div class="inner">
-              <h3 class="masthead-brand">Hytera API</h3>
-              <nav>
-                <ul class="nav masthead-nav">
-                  <li><a href="../">Home</a></li>
-                  <li><a href="../about">About</a></li>
-                  <li class="active"><a href="../help">Help</a></li>
-                </ul>
-              </nav>
-            </div>
+    <div class="site-wrapper-inner">
+
+      <div class="cover-container">
+
+        <div class="masthead clearfix">
+          <div class="inner">
+            <h3 class="masthead-brand">Hytera API</h3>
+            <nav>
+              <ul class="nav masthead-nav">
+                <li><a href="../">Home</a></li>
+                <li><a href="../about">About</a></li>
+                <li class="active"><a href="../help">Help</a></li>
+              </ul>
+            </nav>
           </div>
+        </div>
 
-          <div class="inner cover">
-            <h1 class="cover-heading">If You Cannot Search You Want</h1>
-			<h5>Please input the cmd_name, and I'll perfect the database twice a week.</h5>
-			<br>
-			<button class="btn btn-primary">Feedback</button>
+        <div class="inner cover">
+          <h1 class="cover-heading">If You Cannot Search You Want</h1>
+          <h5>Please input the cmd_name, and I'll perfect the database twice a week.</h5>
+          <br>
+          <button class="btn btn-primary">Feedback</button>
+        </div>
+
+        <div class="mastfoot">
+          <div class="inner">
+            <p>Hello Flowerfat</p>
+            <p>Template is Cover, from <a href="http://getbootstrap.com/">Bootstrap</a>, by <a
+                href="https://twitter.com/mdo">@mdo</a>. Thanks</p>
           </div>
-
-          <div class="mastfoot">
-            <div class="inner">
-              <p>Hello Flowerfat</p>
-              <p>Template is Cover, from <a href="http://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>. Thanks</p>
-            </div>
-          </div>
-
         </div>
 
       </div>
 
     </div>
-		
-		
-    <!-- /.container -->
+
+  </div>
 
 
-    <!-- Bootstrap core JavaScript
+  <!-- /.container -->
+
+
+  <!-- Bootstrap core JavaScript
     ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script>window.jQuery || document.write('<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"><\/script>')</script>
-    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="https://v3.bootcss.com/assets/js/ie10-viewport-bug-workaround.js"></script>
-  </body>
+  <!-- Placed at the end of the document so the pages load faster -->
+  <script>window.jQuery || document.write('<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"><\/script>')</script>
+  <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+  <script src="https://v3.bootcss.com/assets/js/ie10-viewport-bug-workaround.js"></script>
+</body>
+
 </html>
