网页端禁用编辑

--- a/bs/html/detail.html
+++ b/bs/html/detail.html
@@ -59,7 +59,7 @@
             <div class="page-header">
                 <div>
                   <h1 class="hor" id="title">ApiName</h1>
-                  <p id="enableEdit" class="hor">enable / disable</p>
+                  <!-- <p id="enableEdit" class="hor">enable / disable</p> -->
                 </div>
                 <h3 id="description">description</h3>
             </div>
